@@ -1,3 +1,6 @@
+12/23/13:
+	Gracefully handle missing value in config file
+
 11/09/13:
 	Created default bluelog.conf file
 	Makefile updated to create /etc/bluelog
